# gift_ginnie_server

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
blog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
giftginnie/: .env  admin_dashboard_views.py  asgi.py  global_serializers.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_coupon_remove_cart_created_at_and_more.py  0002_initial.py  0003_remove_cart_price_remove_cart_product_and_more.py  0004_alter_cartitem_quantity.py  0005_couponusage.py  0006_coupon_max_usage_coupon_max_usage_per_user.py  0007_alter_order_options_order_coupon_and_more.py  0008_alter_order_total_price.py  0009_remove_order_coupon_remove_order_price_and_more.py  0010_order_razorpay_order_id_order_razorpay_payment_id.py  0011_remove_order_payment_id.py  0012_couponusage_title.py  0013_remove_couponusage_title_coupon_description_and_more.py  0014_alter_couponusage_unique_together.py  0015_alter_order_status.py
products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_carouselitem.py  0002_initial.py  0003_remove_productcategory_image_link_and_more.py  0004_product_images_alter_productimage_product.py  0006_product_images.py  (+17 more)
ratings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
(+14 files in other folders)
